[gd_scene load_steps=12 format=3 uid="uid://c1u164irijpwy"]

[ext_resource type="Texture2D" uid="uid://cmdjdji4bl7av" path="res://scenes/enemies/turtle/blue_shell.png" id="1_2wg4f"]
[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_cg00w"]
[ext_resource type="Texture2D" uid="uid://d1vlgnfegiljk" path="res://scenes/enemies/turtle/enemy2_blu_walking.png" id="2_p7hxg"]
[ext_resource type="FontFile" uid="uid://c6lknuqnaw64n" path="res://assets/fonts/A Goblin Appears!.otf" id="4_6f6qo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abdt7"]
atlas = ExtResource("1_2wg4f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5msr8"]
atlas = ExtResource("2_p7hxg")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v87ie"]
atlas = ExtResource("2_p7hxg")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_grobt"]
atlas = ExtResource("2_p7hxg")
region = Rect2(64, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i3w0o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abdt7")
}],
"loop": true,
"name": &"stomp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5msr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v87ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grobt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3422s"]
size = Vector2(15, 13.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lu56y"]
size = Vector2(15, 12)

[node name="Turtle" type="CharacterBody2D"]
script = ExtResource("1_cg00w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i3w0o")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.705531

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -0.25)
shape = SubResource("RectangleShape2D_3422s")

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 16)

[node name="WallChecker" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(-17, 0)

[node name="StompChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompChecker"]
position = Vector2(-1, -13)
shape = SubResource("RectangleShape2D_lu56y")
debug_color = Color(1.01075e-06, 0.646419, 0.237497, 0.42)

[node name="Label" type="Label" parent="."]
offset_left = -4.0
offset_top = -39.0
offset_right = 7.0
offset_bottom = -22.0
theme_override_fonts/font = ExtResource("4_6f6qo")
theme_override_font_sizes/font_size = 16
text = "!"
horizontal_alignment = 1
